--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -3,6 +3,12 @@
 <h2 class="todo_list_title"><%= @todo_list.title %></h2>
 <p class="todo_list_sub_title"><%= @todo_list.description %></p>
 
+<%= form_with(url: "#{todo_list_path(@todo_list)}/delete_completed_tasks", method: :post, local: true) do |form| %>
+  <div class="actions">
+    <%= form.submit(value: 'Delete Completed Tasks') %>
+  </div>
+<% end %>
+
 <div id="todo_items_wrapper">
   <%= render @todo_list.todo_items %>
   <div id="form">
