--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,6 +71,12 @@ body {
 	font-weight: 100;
 }
 
+.delete_tasks_form {
+	position: absolute;
+	top: 20%;
+	right: 28%;
+}
+
 .index_row {
 	padding: 2em;
 	border-bottom: 1px solid rgba(250,250,250, .3);
@@ -195,4 +201,11 @@ input[type="submit"] {
 		color: white;
 	}
 }
+
+.delete-button input {
+	background: rgba(250,250,250,.4);
+	overflow-wrap: normal;
+	min-width: 135px;
+}
+
 ::-webkit-input-placeholder { color: $dark; }
